MLS: #2299 fix z-index of mls filter

--- a/app/styles/components/pages/listings/components/filters/_filters-main-layout.scss
+++ b/app/styles/components/pages/listings/components/filters/_filters-main-layout.scss
@@ -10,7 +10,7 @@
   pointer-events: none;
   border-radius: 5px;
   background-color: #f8f8f8;
-  z-index: 1;
+  z-index: 2;
   .l-listings--logged & {
     left: $app-sidenav-width + 220px; 
   }
